--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <li>Community forum</li>
     <li>Flashcard decks</li>
     <li>New videos every week</li>
-
   </div>
   </div>
 </div>
+  <script src = "./source.js"></script>
   <body>
   </html>
