--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
     <p>Full access for less than &dollar;1 a day</p>  
 
-  <button>Sign Up</button>
+  <button onclick="a()">Sign Up</button>
   </div><div class="box3">
     <h4>Why Us</h4>
 
